2020-06-21  Keith Marshall  <keith@users.osdn.me>

	Ensure non-void functions always return explicit values.

	* src/guimain.cpp (WinMain): Remove explicit EXIT_FAILURE returns from
	individual exception handlers; relocate it to the default execution
	path, to which all such handlers will fall through.

	* src/dmhguix.cpp (dmhTypeGUI::notify) [DMH_COMPILE_DIGEST]: Return
	number of bytes added to message queue; fall through, to return zero,
	on failure to extend the queue.

2020-06-20  Keith Marshall  <keith@users.osdn.me>

	Simplify numeric argument interpreter function.

	* src/clistub.c (xatoi) [input != NULL]: Delegate to...
	(strtol): ...this standard library function; hence delete redundant
	local implementation, within the NULL pointer rejection guard.

2020-06-19  Keith Marshall  <keith@users.osdn.me>

	Accommodate C++11 string constant conflation limitations.

	* src/dllhook.cpp (MSG_INTERNAL_ERROR)
	* src/pkgexec.cpp (LUA_LIBEXEC_PATH): Insert white space, to separate
	adjacent string constants in conflated text.

2020-06-19  Keith Marshall  <keith@users.osdn.me>

	Force "C" linkage for setup key definitions.

	* src/setup.cpp (uri_key, mirror_key, value_none): Wrap them...
	(BEGIN_C_DECLS, END_C_DECLS): ...between these.

2020-06-19  Keith Marshall  <keith@users.osdn.me>

	Support all-static linking with recent GCC versions.

	* Makefile.in (LDFLAGS): Add "-static" unconditionally.
	(LIBS, SETUP_TOOL_LIBS): Remove all "-Wl,-Bstatic" and "-Wl,-Bdynamic"
	references; the latter, in particular, appears to induce dynamic
	linking of libstdc++-6.dll, overriding "--static-libstdc++".

2020-06-12  Keith Marshall  <keith@users.osdn.me>

	Use XML templates to adapt to download host changes.

	* configure.ac (MINGW_PACKAGE_DIST_URL): Update to OSDN host URL.

	* xml/profile.xml: Rename it as...
	* xml/profile.xml.in: ...this; replace hard-coded repository URL...
	(%PACKAGE_LIST_URL%/%F.xml.lzma): ...this template.

	* xml/setup.xml: Likewise, rename it as...